logs/job_1259.err
  File "/home/ihubnvidia20/vqe4.py", line 84
    basis="sto3g",
    ^
SyntaxError: invalid syntax
